# raytracer

./: CMakeLists.txt  README.md  main.c
.cache/clangd/index/: main.c.7F41A4C376EAD65A.idx
